--- a/app/styles/sass/elements/_space.scss
+++ b/app/styles/sass/elements/_space.scss
@@ -1,7 +1,8 @@
 /* 2.03 - Template Gapping or Spacing - Start
 ================================================== */
 .section_space {
-	padding-top: 120px;
+	background-color: rgb(224, 243, 255);
+	padding-top: 60px;
 	padding-bottom: 30px;
 }
 /* 2.03 - Template Gapping or Spacing - End
