--- a/app/styles/sass/template-parts/_footer.scss
+++ b/app/styles/sass/template-parts/_footer.scss
@@ -55,6 +55,7 @@
 
 // Footer 
 .site_footer {
+	margin-top: 0px;
 	p {
 		font-size: 16px;
 		line-height: 26px;
@@ -65,7 +66,7 @@
 			gap: 12px;
 		}
 		>li {
-			font-size: 18px;
+			font-size: 16px;
 			font-weight: 600;
 			line-height: 28px;
 			letter-spacing: 1px;
@@ -192,9 +193,10 @@
 		color: #B6B8CA;
 	}
 	.content_box {
+		margin-top: -30px;
 		z-index: 2;
 		position: relative;
-		margin-bottom: -40px;
+		margin-bottom: -60px;
 		background-size: auto;
 		border-radius: 0 0 40px 40px;
 		background-repeat: no-repeat;
@@ -217,8 +219,9 @@
 			z-index: -1;
 			content: "";
 			position: absolute;
-			animation: hueRotate 6s linear infinite;
-			background: linear-gradient(45deg, #FAEC60, #F3A338, #F37528, #F44380, #BE3DB3, #0044EB, #5A71F1, #439EFF);
+			// animation: hueRotate 6s linear infinite;
+			// background: linear-gradient(45deg, #FAEC60, #F3A338, #F37528, #F44380, #BE3DB3, #0044EB, #5A71F1, #439EFF);
+			background-color: #439EFF;
 		}
 	}
 
