white backgroud on team section

--- a/app/styles/sass/elements/_space.scss
+++ b/app/styles/sass/elements/_space.scss
@@ -5,5 +5,11 @@
 	padding-top: 100px;
 	padding-bottom: 30px;
 }
+
+.section_space_1 {
+	background-color: rgb(255, 255, 255);
+	padding-top: 100px;
+	padding-bottom: 30px;
+}
 /* 2.03 - Template Gapping or Spacing - End
 ================================================== */
