--- a/app/styles/sass/templates/_about.scss
+++ b/app/styles/sass/templates/_about.scss
@@ -138,6 +138,11 @@
 	}
 }
 
+.policyContent{
+	background-color: aliceblue;
+	padding: 30px;
+}
+
 .about_image_3 {
 	position: relative;
 	.image_wrap {
