changes to suspense

--- a/app/styles/sass/home_style.scss
+++ b/app/styles/sass/home_style.scss
@@ -107,6 +107,7 @@
 @import 'components/team';
 @import '../backofficeStyles/scss/custom/components/card';
 @import '../backofficeStyles/scss/custom/components/badge';
+@import 'components/backoffice_components';
 
 // Template Pages
 @import 'templates/about';
