--- a/app/styles/sass/components/_team.scss
+++ b/app/styles/sass/components/_team.scss
@@ -80,5 +80,32 @@
 		overflow: unset;
 	}
 }
+	.spinner {
+	  margin: 3.2rem auto 1.6rem;
+	  width: 60px;
+	  aspect-ratio: 1;
+	  border-radius: 50%;
+	  border: 8px solid khaki;
+	  border-right-color: #fff;
+	  animation: rotate 1s infinite linear;
+	}
+  
+	.spinner-mini {
+	  margin: 0;
+	  width: 20px;
+	  aspect-ratio: 1;
+	  border-radius: 50%;
+	  border: 2px solid khaki;
+	  border-right-color: transparent;
+	  animation: rotate 1s infinite linear;
+	}
+  
+	@keyframes rotate {
+	  to {
+		transform: rotate(1turn);
+	  }
+	}
+  
+	
 /* 4.10 - Team - End
 ================================================== */
