--- a/app/styles/sass/templates/_backoffice.scss
+++ b/app/styles/sass/templates/_backoffice.scss
@@ -11,3 +11,82 @@
         margin-top: 100px;
     }
 }
+
+.button-primary {
+  display: inline-block;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  background-color: var(--bs-primary);
+  border: 1px solid  var(--bs-primary);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.button-primary:hover {
+  background-color:  var(--bs-primary);
+  border-color:  var(--bs-primary);
+}
+
+.button-primary:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.2rem rgba(255, 166, 0, 0.5);
+}
+
+.button-primary:active {
+  background-color:  var(--bs-primary);
+  border-color:  var(--bs-primary);
+}
+
+.button-primary.disabled, .button-primary:disabled {
+  background-color: #007bff;
+  border-color: #007bff;
+  opacity: 0.65
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+
+    th  {
+       /* Adjust this to your desired header color */
+        
+        padding: 10px; /* Adjust padding as needed */
+        
+      }
+
+      thead {
+        border-radius: 5px 5px 0px 0px;
+        color: rgb(241, 241, 241); 
+        background-color: var(--bs-primary);
+      }
+      
+      tr{
+        //background-color: #f2f2f2; /* Light grey */
+        border-bottom: 1px solid #363636;
+        padding: 10px 0px;
+      }
+      
+      // tr:nth-child(odd) {
+      //   background-color: white;
+      //   border-bottom: 1px solid #363636;
+      //   padding: 0px 10px;
+      // }
+
+      td {
+        padding: 10px 5px; /* Adjust padding as needed */
+        text-align: left;
+        width: auto;
+      }
+
+  }
+
+  .backoffice-row{
+    display: block;
+    width: 100%;
+  }
